--- a/.github/workflows/ca_handler_tests_msca.yml
+++ b/.github/workflows/ca_handler_tests_msca.yml
@@ -142,7 +142,7 @@ jobs:
         KNOWN_HOSTS: ${{ secrets.WCCE_SSH_KNOWN_HOSTS }}
 
     - name: "Establish SSH connection"
-      run: sudo ssh $SSH_USER@$SSH_HOST -i /tmp/rd/ak.tmp -p $SSH_PORT -o UserKnownHostsFile=/tmp/rd/known_hosts -L 445:$WCCE_HOST:445 -L 88:$WCCE_HOST:88 -L 443:$WES_IP:443 -g ping -c 300 $CMP_HOST &
+      run: sudo ssh $SSH_USER@$SSH_HOST -fN -i /tmp/rd/ak.tmp -p $SSH_PORT -o UserKnownHostsFile=/tmp/rd/known_hosts -L 445:$WCCE_HOST:445 -L 88:$WCCE_HOST:88 -L 443:$WES_IP:443 -g
       env:
         SSH_USER: ${{ secrets.WCCE_SSH_USER }}
         SSH_HOST: ${{ secrets.WCCE_SSH_HOST }}
@@ -371,7 +371,6 @@ jobs:
   msca_handler_tests_rpm:
     name: "msca_handler_tests_rpm"
     runs-on: ubuntu-latest
-    needs: msca_handler_tests
     strategy:
       max-parallel: 1
       fail-fast: false
