--- a/.github/workflows/alpn-test.yml
+++ b/.github/workflows/alpn-test.yml
@@ -151,7 +151,7 @@ jobs:
         docker network create acme
         sudo mkdir -p data
         sudo chmod -R 777 data
-        sudo cp ${{ steps.rpm.outputs.rpm_dir_path }}noarch/acme2certifier-${{ env.TAG_NAME }}-1.0.noarch.rpm data
+        sudo cp ${{ steps.rpm.outputs.rpm_dir_path }}noarch/acme2certifier-*${{ env.TAG_NAME }}-1.0.noarch.rpm data
         sudo cp examples/Docker/almalinux-systemd/rpm_tester.sh data
 
     - name: "create letsencrypt and lego folder"
