--- a/.github/workflows/ca_handler_tests_msca.yml
+++ b/.github/workflows/ca_handler_tests_msca.yml
@@ -355,6 +355,7 @@ jobs:
         sudo cp test/ca/certsrv_ca_certs.pem data/acme_ca/ca_certs.pem
         sudo touch data/acme_srv.cfg
         sudo chmod 777 data/acme_srv.cfg
+        sudo echo "$WCCE_CA_BUNDLE" > data/acme_ca/ca_certs.pem
         sudo head -n -8 .github/openssl_ca_handler.py_acme_srv_default_handler.cfg > data/acme_srv.cfg
         sudo echo "handler_file: /opt/acme2certifier/examples/ca_handler/mscertsrv_ca_handler.py" >> data/acme_srv.cfg
         sudo echo "host: $WES_HOST" >> data/acme_srv.cfg
