--- a/.github/workflows/ca_handler_tests_msca.yml
+++ b/.github/workflows/ca_handler_tests_msca.yml
@@ -140,6 +140,7 @@ jobs:
         cd examples/Docker/
         docker-compose restart
         docker-compose logs
+        exit 1
       env:
         WES_HOST: ${{ secrets.WES_HOST }}
         WES_USER: ${{ secrets.WES_USER }}
