--- a/.github/workflows/ca_handler_tests_msca.yml
+++ b/.github/workflows/ca_handler_tests_msca.yml
@@ -123,7 +123,7 @@ jobs:
         sudo echo "host: $WES_HOST" >> examples/Docker/data/acme_srv.cfg
         sudo echo "user: $WES_USER" >> examples/Docker/data/acme_srv.cfg
         sudo echo "password: $WES_PASSWORD" >> examples/Docker/data/acme_srv.cfg
-        sudo echo "auth_method: ntlm" >> examples/Docker/data/acme_srv.cfg
+        sudo echo "auth_method: gssapi" >> examples/Docker/data/acme_srv.cfg
         sudo echo "template: $WES_TEMPLATE" >> examples/Docker/data/acme_srv.cfg
         sudo echo "ca_bundle: volume/ca_certs.pem" >> examples/Docker/data/acme_srv.cfg
         sudo echo "krb5_config: volume/krb5.conf" >> examples/Docker/data/acme_srv.cfg
