--- a/.github/workflows/ca_handler_tests_msca.yml
+++ b/.github/workflows/ca_handler_tests_msca.yml
@@ -120,7 +120,7 @@ jobs:
         sudo chmod 777 examples/Docker/data/acme_srv.cfg
         sudo head -n -8 .github/openssl_ca_handler.py_acme_srv_default_handler.cfg > examples/Docker/data/acme_srv.cfg
         sudo echo "handler_file: examples/ca_handler/mscertsrv_ca_handler.py" >> examples/Docker/data/acme_srv.cfg
-        sudo echo "host: $WES_HOST" >> examples/Docker/data/acme_srv.cfg
+        sudo echo "host: $WCCE_FQDN" >> examples/Docker/data/acme_srv.cfg
         sudo echo "user: $WES_USER" >> examples/Docker/data/acme_srv.cfg
         sudo echo "password: $WES_PASSWORD" >> examples/Docker/data/acme_srv.cfg
         sudo echo "auth_method: gssapi" >> examples/Docker/data/acme_srv.cfg
